# exposure-notifications-internals

./: .gitignore  .no-pr  BUILD.md  CRYPTO.md  README.md  SECURITY.md  build.gradle  en-risks-and-mitigations-faq.md  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/androidTest/java/com/google/samples/ensnippets/: RoundTripTests.kt  SignatureVerificationTests.kt
app/src/androidTest/java/com/google/samples/exposurenotification/testing/: AssociatedEncryptedMetadataGeneratorTest.java  TestVectors.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/google/samples/ensnippets/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
exposurenotification/: build.gradle
exposurenotification/src/main/: AndroidManifest.xml
exposurenotification/src/main/cpp/: CMakeLists.txt  constants.h  key_file_parser.cc  key_file_parser.h  matching_helper.cc  matching_helper.h  matchingjni.cc  nanopb_encoder.cc  nanopb_encoder.h  prefix_id_map.cc  prefix_id_map.h
exposurenotification/src/main/java/com/google/samples/: ByteArrayValue.java  Clock.java  Hex.java  PlatformVersion.java
exposurenotification/src/main/java/com/google/samples/exposurenotification/: CalibrationConfidence.java  DailySummariesConfig.java  DailySummary.java  DiagnosisKeysDataMapping.java  ExposureConfiguration.java  ExposureNotificationStatusCodes.java  ExposureWindow.java  Infectiousness.java  Log.java  ReportType.java  RiskLevel.java  ScanInstance.java  ScannedPacket.java  Tag.java  TekMetadataUtils.java  TemporaryExposureKey.java
exposurenotification/src/main/java/com/google/samples/exposurenotification/annotations/: Hide.java
exposurenotification/src/main/java/com/google/samples/exposurenotification/crypto/: AesCtrEncryptor.java  AesEcbEncryptor.java  CryptoException.java  KeyDerivation.java
exposurenotification/src/main/java/com/google/samples/exposurenotification/data/: AssociatedEncryptedMetadata.java  BluetoothMetadata.java  DayNumber.java  GeneratedRollingProximityId.java  RollingProximityId.java  TemporaryExposureKeySupport.java
exposurenotification/src/main/java/com/google/samples/exposurenotification/features/: ContactTracingFeature.java
exposurenotification/src/main/java/com/google/samples/exposurenotification/matching/: ContactRecordLookUpTable.java  DailySummaryUtils.java  ExposureMatchingTracer.java  ExposureWindowUtils.java  KeyExposureEvaluator.java  MatchingJni.java  MatchingRequest.java  Period.java  ProvideDiagnosisKeys.java  RiskScoreCalculator.java  SightingRecordWithMetadata.java  SignatureVerifier.java  TemporaryExposureKeyExportV1Header.java  TemporaryExposureKeyFileMetadataParser.java  TimeAndAttenuation.java  TracingParams.java
exposurenotification/src/main/java/com/google/samples/exposurenotification/nearby/: AdvertisementPacket.java  CalibrationConfidence.java  DailySummariesConfig.java  DailySummary.java  DiagnosisKeyFileProvider.java  DiagnosisKeysDataMapping.java  ExposureConfiguration.java  ExposureInformation.java  ExposureNotificationClient.java  ExposureNotificationStatus.java  ExposureNotificationStatusCodes.java  ExposureSummary.java  ExposureWindow.java  Infectiousness.java  PackageConfiguration.java  ReportType.java  RiskLevel.java  ScanInstance.java  ScannedPacket.java  TemporaryExposureKey.java  WakeUpService.java
exposurenotification/src/main/proto/: api_call_record.proto  calibration_enums.proto  client_record.proto  contact_record.proto  exposure_key_export.proto  exposure_notification_enums.proto  exposure_result.proto  matching_request.proto  temporary_exposure_key_properties.proto  tracing_params_record.proto
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
